# IEClassic

./: .gitignore  CMakeLists.txt  README.md  configure.cmd
app/: CMakeLists.txt
app/cryptui/: CMakeLists.txt  cryptui.c  cryptui.rc  cryptui.spec
app/msie_check/: CMakeLists.txt  msie_check.cpp  msie_check.h
libs/: CMakeLists.txt
libs/DialogLayout/: CMakeLists.txt  DialogItemTemplate.cpp  DialogItemTemplate.h  DialogLayout.cpp  DialogLayout.h  DialogTemplate.cpp  DialogTemplate.h
libs/FontScalingControl/: CMakeLists.txt  FontScalingControl.cpp  FontScalingControl.h
libs/wine_support/: CMakeLists.txt
libs/wine_support/wine/: debug.c  debug.h  registrar.cpp  registrar.h  stubs.h
libs/wtl/: CMakeLists.txt  wtl.cpp
tools/: CMakeLists.txt  spec2def.c  tools.cmake
tools/manifests/: hidpi_support.manifest  uac_as_invoker.manifest  versioning.manifest  visual_themes.manifest
